--- a/wercker.yml
+++ b/wercker.yml
@@ -18,7 +18,7 @@ build:
                 git submodule update --init --recursive
         - arjen/hugo-build:
             version: 0.14
-depoly:
+deploy:
     steps:
         - eyedol/deploy-gh-pages@0.2.1:
             token: $GIT_TOKEN
