--- a/wercker.yml
+++ b/wercker.yml
@@ -6,9 +6,6 @@ build:
             code: |
                 apt-get update
                 apt-get install git -y
-        #- add-ssh-key:
-        #    keyname: KEY_NAME
-        #    host: github.com
         - add-to-known_hosts:
             hostname: github.com
             fingerprint: 16:27:ac:a5:76:28:2d:36:63:1b:56:4d:eb:df:a6:48
@@ -20,6 +17,14 @@ build:
             version: 0.14
 deploy:
     steps:
+        - script:
+            name: install git
+            code: |
+                apt-get update
+                apt-get install git -y
+        - add-to-known_hosts:
+            hostname: github.com
+            fingerprint: 16:27:ac:a5:76:28:2d:36:63:1b:56:4d:eb:df:a6:48
         - lukevivier/gh-pages@0.2.1:
             token: $GIT_TOKEN
             domain: glacjay.info
