迁移到 blog 子域名

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 ---
-baseUrl: "https://glacjay.info/"
+baseUrl: "https://blog.glacjay.info/"
 title: "Random Stuff from GlacJAY"
 
 languageCode: "zh-cn"
